--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT=6700
-uri="mongodb://localhost:27017/Bookstore"
+uri="mongodb+srv://bookstore:<Akshara01@>@cluster0.uogmt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
